@@ -9,7 +9,7 @@ DIST gcc-4.4.1-patches-1.0.tar.bz2 11203 RMD160 64d3d6b586442db5313ea49f675371c2
 DIST gcc-4.4.1-specs-0.1.6.tar.bz2 1145 RMD160 c63913037b6824d5df01199b703985e96bc1af00 SHA1 630c10853e43ca30e47e8bdbbf03fa27b11143ca SHA256 6a020f7acbf9a5f7eb74c00515a3389d52b2a3c0bbf2f03b6634240d38667377
 DIST gcc-4.4.1-uclibc-patches-1.1.tar.bz2 2279 RMD160 b39cd85a9ec615511bb15c65e65aa61295699eda SHA1 8d5662e57533766ed7d63609df0c9d583771a7fc SHA256 b9592d5e14ddb8868599f1da6c2366b179d5a015a7330f819dd0e4fbf8523341
 DIST gcc-4.4.1.tar.bz2 62869928 RMD160 41cb4c76d1671b1d224d2a6e167ee183dd53d096 SHA1 9156ddb7e4cc72288ec31760d6ddc7981123a8a2 SHA256 cbefa9abd4adac0931e1b556072dcd8b32a360d4b95a94d7822c86bded803d5b
-EBUILD gcc-4.3.4-r1.ebuild 2160 RMD160 24db36621fb8f0b64b18192129aab8f675551a11 SHA1 c9f89879ec410e0cadb56c643e43a57fdd45a987 SHA256 c5635804704ec3009ef72e22cfeac9dc9777ccbfba0a3dac7d2af8600f27a579
-EBUILD gcc-4.4.1-r1.ebuild 2008 RMD160 22c309a16c27a1d5ddea07ea4aaff7afd5a3aceb SHA1 ec3e33783934b518cb878fe88ecaaa0fa571ac0b SHA256 8d6135ef11cb07d24a74d14b582987fedea2acfcf748fdc13532050c237a819d
-MISC ChangeLog 545 RMD160 24d595f61af1a78754edd4f49e5ff35b8a5d1fd1 SHA1 10d005494f16e48ef61aa8991cba17b624da7011 SHA256 84ce96ee526af13e8a7f87457e6462ab1e7c4dd8f1ae94a43533d630193fcb29
+EBUILD gcc-4.3.4-r1.ebuild 2158 RMD160 3fc887e746f738bdb28a3af6d819a0bf73cc20e4 SHA1 6f3f246cb947af3d39fe15308a98603fc5868b7e SHA256 6a3c619b187cb559039446d0d56c4b80874d120c7b16313be5f74dc4c92d1e34
+EBUILD gcc-4.4.1-r1.ebuild 2023 RMD160 5aa15ccded984ae2dfa34f2b157bf63f70589be0 SHA1 70fdaf8d84e06b82ed08075f3143f4a359438779 SHA256 4a15a77cbb72c700c13088ca19abab448731b9d0804f66a2851d6d063491b2da
+MISC ChangeLog 701 RMD160 764dd5d70e6c01950bfba15ae1122040e0439045 SHA1 de4309071d09f14d11385c7dfcde59387ecfab00 SHA256 d16c12c9d737d6f17608cd477227683db4acc94c30a60bcb657e2ba8808798fe
 MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
