@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Sep 2009; Peter Hjalmarsson <xake@gentoo.org> gcc-4.3.4-r1.ebuild,
+  gcc-4.4.1-r1.ebuild:
+  License updated, deps bumped, Vapier usually has a point.
+
 *gcc-4.4.1-r1 (21 Sep 2009)
 
   20 Sep 2009; Magnus Granberg <zorry@ume.nu> gcc-4.3.4-r1.ebuild,
